--- a/jquery.gdocsviewer_demo.html
+++ b/jquery.gdocsviewer_demo.html
@@ -30,20 +30,19 @@ $(document).ready(function() {
 <div style="background:#fff; width:960px; margin:0 auto; padding:20px;">
 	<h1>gDocsViewer jQuery plugin v1.0 Demo</h1>
 	<div>
-	<p>By <a href="http://www.jawish.org/">Jawish Hameed</a></p>
+	<p>By <a href="http://www.justinfarrow.com/">Farrow</a></p>
 
-	<p>See <a href="http://www.jawish.org/blog/archives/394-Google-Docs-Viewer-plugin-for-jQuery.html" target="_blank">documentation and usage guide</a></p>
 	
 	</div>
 	<hr size="1" />
 	<div>
 		<h2>Examples</h2>
 		<h3>URLs with class: embed</h3>
-		<a href="http://finaid.georgetown.edu/sample.pdf" class="embed">PDF test georgetown.edu</a>
-		<a href="http://plugindoc.mozdev.org/testpages/test.pdf" class="embed" id="test">PDF at mozdev.org</a>
+		<a href="http://api.ning.com:80/files/PQhYDSrIN1VuBNJKUtHY-P7ypPAi6MMhlZIRXjWphLfABiWsgHwbN7CeO6vIo4bTs6ly2uAY-bhFNZ8RHCmXDJf4-2612G*z/set234bii_operators_manual.pdf" class="embed">PDF test georgetown.edu</a>
+		<a href="http://api.ning.com:80/files/PQhYDSrIN1VuBNJKUtHY-P7ypPAi6MMhlZIRXjWphLfABiWsgHwbN7CeO6vIo4bTs6ly2uAY-bhFNZ8RHCmXDJf4-2612G*z/set234bii_operators_manual.pdf" class="embed" id="test">PDF at landsurveyorsunited</a>
 
 		<h3>URLs with id: embedURL</h3>
-		<a href="http://samplepdf.com/sample.pdf" id="embedURL">Sample PDF at samplepdf.com</a>
+		<a href="http://api.ning.com:80/files/PQhYDSrIN1VuBNJKUtHY-P7ypPAi6MMhlZIRXjWphLfABiWsgHwbN7CeO6vIo4bTs6ly2uAY-bhFNZ8RHCmXDJf4-2612G*z/set234bii_operators_manual.pdf" id="embedURL">Sample PDF at samplepdf.com</a>
 	</div>
 </div>
 </body>
